# ADS1115_Pico_C_example

./: CMakeLists.txt  main.c
lib/: CMakeLists.txt  ads1115.c
